@@ -1,6 +1,6 @@
 elFinder Integration
 
-Copyright (c) 2010-2018, Alexey Sukhotin. All rights reserved.
+Copyright (c) 2010-2020, Alexey Sukhotin. All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
 
