@@ -1,4 +1,3 @@
-; $Id: elfinder.info 106 2011-02-26 08:19:56Z ph0enix $
 name = elFinder
 description = AJAX file manager with Wysiwyg API capable editors support.
 package = User interface
@@ -6,9 +5,9 @@ configure = "admin/config/media/elfinder"
 core = 7.x
 project status url = https://drupal-elfinder.sourceforge.io/release-history.php
 
-; Information added by Drupal.org packaging script on 2017-11-16
+; Information added by packaging script
 version = "7.x-2.x-dev"
 core = "7.x"
 project = "elfinder"
-datestamp = "1555577224"
+datestamp = "1591449874"
 
