@@ -1,4 +1,3 @@
-; $Id: elfinder_ffsel.info,v 1.1.2.2 2010/11/20 23:18:55 ph0enix Exp $
 name = elFinder BUEditor integration
 description = Adding elFinder to BUEditor Insert Image dialog
 package = User interface
@@ -8,9 +7,9 @@ project status url = https://drupal-elfinder.sourceforge.io/release-history.php
 dependencies[] = bueditor
 dependencies[] = elfinder
 
-; Information added by Drupal.org packaging script on 2017-11-16
+; Information added by packaging script
 version = "7.x-2.x-dev"
 core = "7.x"
 project = "elfinder"
-datestamp = "1555577224"
+datestamp = "1591449874"
 
