@@ -6,9 +6,9 @@ project status url = https://drupal-elfinder.sourceforge.io/release-history.php
 
 dependencies[] = elfinder
 
-; Information added by Drupal.org packaging script on 2017-11-16
+; Information added by packaging script
 version = "7.x-2.x-dev"
 core = "7.x"
 project = "elfinder"
-datestamp = "1555577224"
+datestamp = "1591449874"
 
